added github error

--- a/index.html
+++ b/index.html
@@ -372,12 +372,12 @@ div.tocify {
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="index.html"></a>
+      <a class="navbar-brand" href="index.html">Resources</a>
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
         <li>
-  <a href="index.html">Overview</a>
+  <a href="index.html">Home</a>
 </li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
@@ -396,6 +396,12 @@ div.tocify {
 </div>
 
 
+<div id="github" class="section level1">
+<h1>Github</h1>
+<p><a href="https://help.github.com/en/articles/error-permission-denied-publickey">When github won’t push and returns a permission denied public key error</a></p>
+</div>
+<div id="rmarkdown" class="section level1">
+<h1>RMarkdown</h1>
 <p><a href="https://yihui.name/knitr/demo/externalization/">How to call an external R script from within an Rmarkdown document</a><br />
 - Add a tag to the R script so knitr can find it. It must be in the ‘## —- tag’ format.<br />
 - In the Rmd, use these chunks</p>
@@ -431,6 +437,7 @@ div.tocify {
 <p>Finally, head to the Settings tab of your repository.</p>
 <p>Scroll down to the Github Pages section and click None. Select master branch as your Source and then hit Save.</p>
 <p>Now, navigate to {username}.github.io/{reponame} and your website should be live! Mine is at aleszu.github.io/digisoc/.</p>
+</div>
 
 
 
