add how to tranfer data from google to R

--- a/index.html
+++ b/index.html
@@ -400,6 +400,12 @@ div.tocify {
 <h1>Github</h1>
 <p><a href="https://help.github.com/en/articles/error-permission-denied-publickey">When github won’t push and returns a permission denied public key error</a></p>
 </div>
+<div id="data-import" class="section level1">
+<h1>Data Import</h1>
+<div id="how-to-tranfer-data-from-google-to-r" class="section level2">
+<h2><a href="https://cran.r-project.org/web/packages/googlesheets/vignettes/basic-usage.html">How to tranfer data from Google to R</a></h2>
+</div>
+</div>
 <div id="rmarkdown" class="section level1">
 <h1>RMarkdown</h1>
 <p><a href="https://yihui.name/knitr/demo/externalization/">How to call an external R script from within an Rmarkdown document</a><br />
