changed the tutorial website for how to go from google to R

--- a/index.html
+++ b/index.html
@@ -402,9 +402,7 @@ div.tocify {
 </div>
 <div id="data-import" class="section level1">
 <h1>Data Import</h1>
-<div id="how-to-tranfer-data-from-google-to-r" class="section level2">
-<h2><a href="https://cran.r-project.org/web/packages/googlesheets/vignettes/basic-usage.html">How to tranfer data from Google to R</a></h2>
-</div>
+<p><a href="https://googlesheets4.tidyverse.org">How to tranfer data from Google to R</a></p>
 </div>
 <div id="rmarkdown" class="section level1">
 <h1>RMarkdown</h1>
